--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,5 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/onlinestore
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=update
-spring.datasource.username=root
-spring.datasource.password=p@ss4root
-
-
-
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.datasource.username=myatlinn
+spring.datasource.password=Some@li3
