--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/onlinestore
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=create-drop
-spring.datasource.username=postgres
-spring.datasource.password=admin
+spring.datasource.username=hello
+spring.datasource.password=hello
